# pasme

./: LICENSE  PKG-INFO  pyproject.toml
src/: main.py
src/pasme.egg-info/: SOURCES.txt
